files/apps/cobweb/cobweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cobweb
  namespace: cobweb
  labels:
    app: cobweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cobweb
  template:
    metadata:
      labels:
        app: cobweb
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web
        nfs:
          path: /hulkpool/config/web
          server: cerberus.techn.is
