files/apps/cobweb/cobweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobweb
  namespace: cobweb
  labels:
    app: cobweb
spec:
  selector:
    app: cobweb
  ports:
  - port: 80
    protocol: TCP
