files/apps/cobweb/cobweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cobweb
  namespace: cobweb
  labels:
    app: cobweb
spec:
  tls:
  - hosts:
    - j3o.me
    secretName: j3o-cert
  rules:
  - host: j3o.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cobweb
            port:
              number: 80
  - host: www.techn.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cobweb
            port:
              number: 80
  - host: cobweb.k8s.techn.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cobweb
            port:
              number: 80
